Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-97945

assert in qnsview_mouse.mm

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Done
    • Icon: P2: Important P2: Important
    • 5.15.8, 6.3.0 Alpha
    • 6.2
    • QPA
    • None
    • macOS
    • 122f7d7adcbc16389728855dcff9f3e19c4652bd (qt/qtbase/dev) 2ddf97578c2c6dd45ccbecf3b4afcd345eca04fb (qt/qtbase/6.2) 9b1aab743ca6a2e2bb17f8a5729a1d647273b5b5 (qt/tqtc-qtbase/5.15)

      While debugging an issue with a sccroll-view (one of Qt's own itemviews), I'm suddenly getting this assert:

      ASSERT: "pixelDelta.isNull() && angleDelta.isNull()" in file .../qtbase/src/plugins/platforms/cocoa/qnsview_mouse.mm, line 717
      Abort trap: 6

      Not always easy to reproduce, normally I have to scroll (using a trackpad) quite fast and probably in vertical and horizontal directions.

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

            tpochep Timur Pocheptsov
            tpochep Timur Pocheptsov
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes